@@ -3,7 +3,6 @@
 package edu.colorado.phet.balancingchemicalequations.model;
 
 import edu.colorado.phet.common.phetcommon.model.Property;
-import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 
 /**
  * A term in a chemical equation.
@@ -15,7 +14,6 @@ public class EquationTerm {
     private final Molecule molecule;
     private final int balancedCoefficient;
     private final Property<Integer> actualCoefficientProperty;
-    private final Property<Boolean> balancedProperty;
 
     public EquationTerm( int balancedCoefficient, Molecule molecule ) {
         this( balancedCoefficient, molecule, 0 );
@@ -25,24 +23,10 @@ public class EquationTerm {
         this.molecule = molecule;
         this.balancedCoefficient = balancedCoefficient;
         this.actualCoefficientProperty =  new Property<Integer>( actualCoefficient );
-        this.balancedProperty = new Property<Boolean>( balancedCoefficient == actualCoefficient );
-        this.actualCoefficientProperty.addObserver( new SimpleObserver() {
-            public void update() {
-                balancedProperty.setValue( getBalancedCoefficient() == getActualCoefficient() );
-            }
-        } );
     }
 
     public void reset() {
         actualCoefficientProperty.reset();
-    }
-
-    public boolean isBalanced() {
-        return balancedProperty.getValue();
-    }
-
-    public Property<Boolean> getBalancedProperty() {
-        return balancedProperty;
     }
 
     public Molecule getMolecule() {
