@@ -1,3 +1,4 @@
+1/11/11 add "balanced with lowest coefficients" to model
 1/10/11 debug node to indicate whether equation is balanced
 1/10/11 display equations, editable and read-only
 1/10/11 add Reset All button, wired up to model
